--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=
 
-DB_HOST=mysql
+DB_HOST=cobiro_mysql
 DB_DATABASE=cobiro
 DB_USERNAME=cobiro
 DB_PASSWORD=secret
