--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "The Cobiro Task.",
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.4",
+        "ext-json": "^7.4",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
